--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
-    "python.linting.banditEnabled": true
+    "python.linting.banditEnabled": false,
+    "python.linting.flake8Enabled": true
 }
